compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__internal_type_in_generic_position_warns.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n@internal\npub type Internal {\n  Internal\n}\n\npub fn foo() -> List(Internal) { [] }\n"
snapshot_kind: text
---
----- SOURCE CODE

@internal
pub type Internal {
  Internal
}

pub fn foo() -> List(Internal) { [] }


----- WARNING
warning: Internal type used in public interface
  ┌─ /src/warning/wrn.gleam:7:1
  │
7 │ pub fn foo() -> List(Internal) { [] }
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

The following type is internal, but is being used by this public export.

    Internal

Internal types should not be used in a public facing function since they are
hidden from the package's documentation.
