compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__internal_type_in_public_constant_warns.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n@internal\npub type Internal {\n  Internal\n}\n\npub const c: Internal = Internal\n"
---
----- SOURCE CODE

@internal
pub type Internal {
  Internal
}

pub const c: Internal = Internal


----- WARNING
warning: Internal type used in public interface
  ┌─ /src/warning/wrn.gleam:7:1
  │
7 │ pub const c: Internal = Internal
  │ ^^^^^^^^^^^^^^^^^^^^^

The following type is internal, but is being used by this public export.

    Internal

Internal types should not be used in a public facing function since they
are hidden from the package's documentation.
