compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__internal_type_in_public_constructor.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n@internal\npub type Wibble {\n  Wibble\n}\n\npub type Wobble {\n    Wobble(Wibble)\n}\n"
---
----- SOURCE CODE

@internal
pub type Wibble {
  Wibble
}

pub type Wobble {
    Wobble(Wibble)
}


----- WARNING
warning: Internal type used in public interface
  ┌─ /src/warning/wrn.gleam:8:5
  │
8 │     Wobble(Wibble)
  │     ^^^^^^^^^^^^^^

The following type is internal, but is being used by this public export.

    Wibble

Internal types should not be used in a public facing function since they
are hidden from the package's documentation.
