compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__internal_type_in_public_function_argument.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n@internal\npub type Wibble {\n  Wibble\n}\n\npub fn wibble(_wibble: Wibble) -> Int { 1 }\n"
snapshot_kind: text
---
----- SOURCE CODE

@internal
pub type Wibble {
  Wibble
}

pub fn wibble(_wibble: Wibble) -> Int { 1 }


----- WARNING
warning: Internal type used in public interface
  ┌─ /src/warning/wrn.gleam:7:1
  │
7 │ pub fn wibble(_wibble: Wibble) -> Int { 1 }
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

The following type is internal, but is being used by this public export.

    Wibble

Internal types should not be used in a public facing function since they are
hidden from the package's documentation.
