compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__type_from_internal_module_in_public_function_return.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\nimport thepackage/internal.{type Wibble, Wibble}\n\npub fn wibble() -> Wibble {\n  Wibble\n}"
---
----- SOURCE CODE
-- thepackage/internal.gleam
pub type Wibble { Wibble }

-- main.gleam

import thepackage/internal.{type Wibble, Wibble}

pub fn wibble() -> Wibble {
  Wibble
}

----- WARNING
warning: Internal type used in public interface
  ┌─ /src/warning/wrn.gleam:4:1
  │
4 │ pub fn wibble() -> Wibble {
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^

The following type is internal, but is being used by this public export.

    Wibble

Internal types should not be used in a public facing function since they
are hidden from the package's documentation.
